--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "class-validator": "^0.14.1",
     "dotenv-cli": "^7.4.2",
     "nodemailer": "^6.9.14",
-    "reflect-metadata": "^0.2.2"
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.0",
